@@ -1,3 +1,6 @@
+2012-01-05
+ Recognise "others" in last switch branch as a possible mistake.
+
 Version 1.1.12
 
 2011-11-27
